human_written_tests/WebAssembly/processed_control_flow_validation/test_block_138.wast
(assert_invalid
  (module (func $type-break-operand-empty-vs-f32 (result f32)
    (f32.floor (block (br 0)))
  ))
  "type mismatch"
)